# procedural-painting

./: .gitignore  README.md  pyproject.toml
benchmark/: bench_optimization.py
notebooks/: 01_prototyping.ipynb
src/: draw.py  optimizers.py
tests/: test_parameters.py
