[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural_painting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "opencv-python>=4.10.0.84",
    "setuptools>=74.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "scalene>=1.5.42.2",
    "hypothesis>=6.112.1",
]
